tests/errors/unterminated_comment_01.f90
#if !defined pi_constant
#define PI 3.14
#endif /* unterminated comment starts here

program unterminated_comment_01
    implicit none
    print *, "PI: ", PI
end program unterminated_comment_01
